# Diario-de-Bordo

./: .gitignore  Dockerfile  Makefile  README.md
diario-de-bordo/: README.md  pyproject.toml  requirements.txt
diario-de-bordo/conf/base/: catalog.yml
diario-de-bordo/data/raw/: ex1.py  ex2.py
diario-de-bordo/src/diario_de_bordo/: __init__.py  __main__.py  settings.py
diario-de-bordo/src/diario_de_bordo/pipelines/data_processing/: nodes.py  pipeline.py
diario-de-bordo/src/tests/: test_run.py
diario-de-bordo/src/tests/common_tests/: test_column_type_by_prefix.py  test_no_fully_null_columns.py
diario-de-bordo/src/tests/test_nodes/: test_run.py
diario-de-bordo/src/tests/utils/: moc_data.py
